# medical-rag-chatbot

./: .gitignore  app.py  main.py  pyproject.toml  store_index.py
src/: helper.py  prompt.py
static/: style.css
templates/: index.html
