[project]
name = "medical-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "flask>=3.1.3",
    "langchain>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "langchain-pinecone>=0.2.13",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
